# Clases-Python-intermedio

./: .gitignore  Interruptor.py  archivo de prueba.py  pyproject.toml
Clases-Python-intermedio/apuntes/clase_4/: cache-con-Clase.py  cache.py  dataclass-config.py  (+14 more)
apuntes/: compresion_random_list_dict.py  filtro_contar_letras_nombres_unicos.py  filtro_eliminar_por_patron.py  lambda_esmail.py  objeto_deuda_dunder.py  sistema_callback_password.py  test_compresion_random_list_dict.py  test_filtrar_nombres_por_patron.py  test_filtro.contar_letras_nombres_unicos.py  test_objeto_deuda_dunder.py  test_sistema_callback.py
apuntes/clase_1/: miguelm-perfil_laboral.py  miguelm-test_perfil_laboral.py  miguelm_interruptor.py  perfil_laboral.py  personal_laboral.py  test_personal.py  transcripcion_csv_2.py
apuntes/clase_2/: javier_perez - pandas.py
apuntes/clase_4/: apuntes.py  playlist.py  test_playlist.py
apuntes/clase_8/: apuntes.py
ejercicios/: pyproject.toml
ejercicios/clase_1/: Ejercicio Interruptor Clase 1.py  analisis_csv.py  analisis_csv_02.py  clase01_csv_con_remote.csv  david_interruptor.py  interruptor.py  interruptor_RafaR.py  javier_perez - interuptor.py  juan-contar profesion.py  juan-interruptor.py  juan-menores de edad en csv  markdown_miguelm.py  miguelm-interruptor.py  perfil_laboral.py  pyproject.toml  test_markdown_miguelm.py  test_perfiles.py  transcripcion_csv.py
ejercicios/clase_2/: Juan-markup-01  david_data.py  javier_perez - pandas.py  miguelm-test_markdown.py  pandas_ejercicio_RafaR.py
ejercicios/clase_4/: clinica.py  test_clinica.py
(+2 files in other folders)
