[project]
name = "clases-python-intermedio"
version = "0.1.0"
description = "Entorno compartido para scripts del curso de Python intermedio"
authors = [
    {name = "MiguelMO2311",email = "mmeneses73@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "markdown (>=3.9,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
